# protobuf-init

./: .tool-versions  Makefile  README.md  pyproject.toml
example/: __init__.py
example/mod/v1/: __init__.py  another_grpc.py  another_pb2.py  another_pb2.pyi  another_pb2_grpc.py  example_grpc.py  example_pb2.py  example_pb2.pyi  hyphen_ated_grpc.py  hyphen_ated_pb2.py  hyphen_ated_pb2.pyi  referencing_grpc.py  referencing_pb2.py  referencing_pb2.pyi
protobuf_init/: plugin.py
protos/example/mod/v1/: another.proto  example.proto  hyphen-ated.proto  referencing.proto
